[package]
name = "cuddly-content"
version = "0.0.1"
description = "A content creator for the Cuddly Octo Adventure project"
homepage = "https://github.com/svmnotn/cuddly-octo-adventure"
repository = "svmnotn/cuddly-octo-adventure"
readme = "README.md"
license = "MIT"
keywords = ["game"]
authors = ["Victor M. Suarez <svmnotn@gmail.com>"]

[dependencies]
cuddly-octo-adventure = { path = "../cuddly-octo-adventure" }
clap = "2"
