[package]
name = "cuddly-octo-adventure"
version = "0.0.1"
description = "The core libbrary of the Cuddly Octo Adventure Project."
homepage = "https://github.com/svmnotn/cuddly-octo-adventure"
repository = "svmnotn/cuddly-octo-adventure"
readme = "README.md"
license = "MIT"
keywords = ["game"]
authors = ["Victor M. Suarez <svmnotn@gmail.com>"]

[lib]
name = "coa"

[dependencies]
serde = "0"
serde_json = "0"
serde_macros = "0"
zip = "0"
tempdir = "0"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk.git"
features = ["v3_16"]

[dependencies.gdk]
git = "https://github.com/gtk-rs/gdk.git"
features = ["v3_16"]
